--- a/.travis.yml
+++ b/.travis.yml
@@ -275,7 +275,7 @@ before_script:
 
 before_install:
   - (wget https://github.com/boostorg/build/archive/boost-1.59.0.tar.gz
-     && tar zxf boost-1.59.0.tar.gz && cd boost-1.59.0 && ./bootstrap.sh && export PATH="$PATH:$PWD")
+     && tar zxf boost-1.59.0.tar.gz && cd build-boost-1.59.0 && ./bootstrap.sh && export PATH="$PATH:$PWD")
   - if [ "$TRAVIS_OS_NAME" == "osx" ]; then (brew install cmake); fi
 
 install:
