--- a/.travis.yml
+++ b/.travis.yml
@@ -272,7 +272,7 @@ before_script:
 
 before_install:
   - if [ "${BS}" == "bjam" ]; then (wget https://github.com/boostorg/build/archive/boost-1.59.0.tar.gz
-     && tar zxf boost-1.59.0.tar.gz && cd build-boost-1.59.0 && ./bootstrap.sh && export PATH="$PATH:$PWD"); fi
+     && tar zxf boost-1.59.0.tar.gz && cd build-boost-1.59.0 && ./bootstrap.sh && ./b2 install --prefix=/usr/local/bin); fi
   - if [ "$TRAVIS_OS_NAME" == "osx" ] && [ "${BS}" == "cmake" ]; then (brew install cmake); fi
 
 install:
