[travis] doc quickbook

--- a/.travis.yml
+++ b/.travis.yml
@@ -282,6 +282,7 @@ install:
   - if [ "${BS}" == "bjam" ]; then (wget https://github.com/boostorg/build/archive/boost-1.59.0.tar.gz
     && tar zxf boost-1.59.0.tar.gz && cd build-boost-1.59.0 && ./bootstrap.sh)
     && touch Jamroot && export BOOST_ROOT="$PWD/build-boost-1.59.0" && export PATH="$PATH:$BOOST_ROOT"; fi
+  - if [ "${DOCUMENTATION}" != "" ]; then (cd $BOOST_ROOT && mkdir tools && git clone https://github.com/boostorg/quickbook.git); fi
   - if [ "${LIBCXX}" != "" ]; then (svn --quiet co http://llvm.org/svn/llvm-project/libcxx/trunk libcxx
     && cd libcxx/lib && ./buildit && ln -f -s libc++.so.1.0 libc++.so.1)
     && export CXXFLAGS="-stdlib=libc++ -I${TRAVIS_BUILD_DIR}/libcxx/include"
