--- a/.travis.yml
+++ b/.travis.yml
@@ -282,7 +282,6 @@ install:
   - if [ "${BS}" == "bjam" ]; then (wget https://github.com/boostorg/build/archive/boost-1.59.0.tar.gz
     && tar zxf boost-1.59.0.tar.gz && cd build-boost-1.59.0 && ./bootstrap.sh)
     && touch Jamroot && export BOOST_ROOT="$PWD/build-boost-1.59.0" && export PATH="$PATH:$BOOST_ROOT"; fi
-  - if [ "${DOCUMENTATION}" != "" ]; then (cd $BOOST_ROOT && mkdir tools && git clone https://github.com/boostorg/quickbook.git); fi
   - if [ "${LIBCXX}" != "" ]; then (svn --quiet co http://llvm.org/svn/llvm-project/libcxx/trunk libcxx
     && cd libcxx/lib && ./buildit && ln -f -s libc++.so.1.0 libc++.so.1)
     && export CXXFLAGS="-stdlib=libc++ -I${TRAVIS_BUILD_DIR}/libcxx/include"
@@ -293,10 +292,9 @@ script:
   - if [ "${CXX}" != "" ]; then (travis_wait make all); fi
   - if [ "${CHECK}" != "" ]; then (travis_wait make check); fi
   - if [ "${TRAVIS_BRANCH}" == "cpp14" ] && [ "${DOCUMENTATION}" != "" ]; then (
-    make doc && git clone --quiet --recursive --depth=1 --single-branch https://github.com/boostorg/boost.git
-    && cd boost && ./bootstrap.sh && ./b2 headers && mkdir libs/di && cp -r ../build ../doc ../example ../include libs/di
-    && cd libs/di/doc && ../build/b2 -sBOOST_ROOT=../build && TRY_IT_ONLINE=ON scripts/update_html.sh
-    && git clone https://github.com/krzysztof-jusiak/di.git
+    git clone --quiet --recursive --depth=1 --single-branch https://github.com/boostorg/boost.git
+    && cd boost && ./bootstrap.sh && ./b2 headers && mkdir libs/di && cp -r Makefile ../doc ../example ../include libs/di
+    && cd libs/di/doc && make doc && && git clone https://github.com/krzysztof-jusiak/di.git
     && cd di && git checkout -b gh-pages -t origin/gh-pages && git reset --hard
     && rm -rf cpp14/boost/libs/di/doc/html && cp -r ../html cpp14/boost/libs/di/doc
     && git add -A . && git commit -am "update" && git push --force --quiet
