--- a/.travis.yml
+++ b/.travis.yml
@@ -26,18 +26,18 @@ matrix:
       apt:
         packages: ["xsltproc"]
   - os: linux
-    env: CHECK=ON CLANG_FORMAT=clang-format-3.8 CLANG_TIDY=clang-tidy-3.8
+    env: CHECK=ON CLANG_FORMAT=clang-format-3.7 CLANG_TIDY=clang-tidy-3.7
     addons:
       apt:
-        packages: ["clang-3.8", "clang-format-3.8", "clang-tidy-3.8"]
+        packages: ["clang-format-3.7", "clang-tidy-3.7"]
         sources:
         - ubuntu-toolchain-r-test
-        - llvm-toolchain-precise
+        - llvm-toolchain-precise-3.7
   - os: linux
     env: BS=bjam TOOLSET=clang MEMCHECK=VALGRIND BENCHMARK=QUICK CXX=/usr/local/clang-3.4/bin/clang++
     addons:
       apt:
-        packages: ["clang-3.4", "libstdc++-5-dev", "valgrind", "gdb", "bc"]
+        packages: ["clang-3.4", "libstdc++-5-dev", "valgrind", "gdb"]
         sources:
         - ubuntu-toolchain-r-test
         - llvm-toolchain-precise-3.4
@@ -45,7 +45,7 @@ matrix:
     env: BS=bjam TOOLSET=clang MEMCHECK=VALGRIND LIBCXX=ON CXX=/usr/local/clang-3.4/bin/clang++
     addons:
       apt:
-        packages: ["clang-3.4", "libstdc++-5-dev", "valgrind", "gdb", "bc"]
+        packages: ["clang-3.4", "libstdc++-5-dev", "valgrind", "gdb"]
         sources:
         - ubuntu-toolchain-r-test
         - llvm-toolchain-precise-3.4
@@ -53,7 +53,7 @@ matrix:
     env: BS=bjam TOOLSET=clang VARIANT=analyze CXX=/usr/local/clang-3.4/bin/clang++
     addons:
       apt:
-        packages: ["clang-3.4", "libstdc++-5-dev", "valgrind", "gdb", "bc"]
+        packages: ["clang-3.4", "libstdc++-5-dev", "valgrind", "gdb"]
         sources:
         - ubuntu-toolchain-r-test
         - llvm-toolchain-precise-3.4
@@ -61,7 +61,7 @@ matrix:
     env: BS=bjam TOOLSET=clang MEMCHECK=VALGRIND BENCHMARK=QUICK CXX=clang++-3.5
     addons:
       apt:
-        packages: ["clang-3.5", "libstdc++-5-dev", "valgrind", "gdb", "bc"]
+        packages: ["clang-3.5", "libstdc++-5-dev", "valgrind", "gdb"]
         sources:
         - ubuntu-toolchain-r-test
         - llvm-toolchain-precise-3.5
@@ -69,7 +69,7 @@ matrix:
     env: BS=bjam TOOLSET=clang MEMCHECK=VALGRIND LIBCXX=ON CXX=clang++-3.5
     addons:
       apt:
-        packages: ["clang-3.5", "libstdc++-5-dev", "valgrind", "gdb", "bc"]
+        packages: ["clang-3.5", "libstdc++-5-dev", "valgrind", "gdb"]
         sources:
         - ubuntu-toolchain-r-test
         - llvm-toolchain-precise-3.5
@@ -77,7 +77,7 @@ matrix:
     env: B=bjam TOOLSET=clang MEMCHECK=VALGRIND BENCHMARK=QUICK CXX=clang++-3.6
     addons:
       apt:
-        packages: ["clang-3.6", "libstdc++-5-dev", "valgrind", "gdb", "bc"]
+        packages: ["clang-3.6", "libstdc++-5-dev", "valgrind", "gdb"]
         sources:
         - ubuntu-toolchain-r-test
         - llvm-toolchain-precise-3.6
@@ -85,7 +85,7 @@ matrix:
     env: BS=bjam TOOLSET=clang MEMCHECK=VALGRIND LIBCXX=ON CXX=clang++-3.6
     addons:
       apt:
-        packages: ["clang-3.6", "libstdc++-5-dev", "valgrind", "gdb", "bc"]
+        packages: ["clang-3.6", "libstdc++-5-dev", "valgrind", "gdb"]
         sources:
         - ubuntu-toolchain-r-test
         - llvm-toolchain-precise-3.6
@@ -93,7 +93,7 @@ matrix:
     env: BS=bjam TOOLSET=clang MEMCHECK=VALGRIND BENCHMARK=QUICK CXX=clang++-3.7
     addons:
       apt:
-        packages: ["clang-3.7", "libstdc++-5-dev", "valgrind", "gdb", "bc"]
+        packages: ["clang-3.7", "libstdc++-5-dev", "valgrind", "gdb"]
         sources:
         - ubuntu-toolchain-r-test
         - llvm-toolchain-precise-3.7
@@ -101,7 +101,7 @@ matrix:
     env: BS=bjam TOOLSET=clang MEMCHECK=VALGRIND LIBCXX=ON CXX=clang++-3.7
     addons:
       apt:
-        packages: ["clang-3.7", "libstdc++-5-dev", "valgrind", "gdb", "bc"]
+        packages: ["clang-3.7", "libstdc++-5-dev", "valgrind", "gdb"]
         sources:
         - ubuntu-toolchain-r-test
         - llvm-toolchain-precise-3.7
@@ -109,7 +109,7 @@ matrix:
     env: BS=cmake CXX=clang++-3.7
     addons:
       apt:
-        packages: ["clang-3.7", "libstdc++-5-dev", "gdb", "bc"]
+        packages: ["clang-3.7", "libstdc++-5-dev", "gdb"]
         sources:
         - ubuntu-toolchain-r-test
         - llvm-toolchain-precise-3.7
@@ -117,7 +117,7 @@ matrix:
     env: BS=bjam TOOLSET=clang MEMCHECK=VALGRIND BENCHMARK=QUICK CXX=clang++-3.8
     addons:
       apt:
-        packages: ["clang-3.8", "libstdc++-5-dev", "valgrind", "gdb", "bc"]
+        packages: ["clang-3.8", "libstdc++-5-dev", "valgrind", "gdb"]
         sources:
         - ubuntu-toolchain-r-test
         - llvm-toolchain-precise
@@ -125,7 +125,7 @@ matrix:
     env: BS=bjam TOOLSET=clang MEMCHECK=VALGRIND LIBCXX=ON CXX=clang++-3.8
     addons:
       apt:
-        packages: ["clang-3.8", "libstdc++-5-dev", "valgrind", "gdb", "bc"]
+        packages: ["clang-3.8", "libstdc++-5-dev", "valgrind", "gdb"]
         sources:
         - ubuntu-toolchain-r-test
         - llvm-toolchain-precise
@@ -133,7 +133,7 @@ matrix:
     env: BS=cmake CXX=clang++-3.8
     addons:
       apt:
-        packages: ["clang-3.8", "libstdc++-5-dev", "gdb", "bc"]
+        packages: ["clang-3.8", "libstdc++-5-dev", "gdb"]
         sources:
         - ubuntu-toolchain-r-test
         - llvm-toolchain-precise
@@ -155,14 +155,14 @@ matrix:
     env: BS=bjam TOOLSET=gcc BENCHMARK=QUICK CXX=g++-5
     addons:
       apt:
-        packages: ["g++-5", "libstdc++-5-dev", "gdb", "bc"]
+        packages: ["g++-5", "libstdc++-5-dev", "gdb"]
         sources:
         - ubuntu-toolchain-r-test
   - os: linux
     env: BS=cmake BENCHMARK=ON CXX=g++-5
     addons:
       apt:
-        packages: ["g++-5", "libstdc++-5-dev", "gdb", "bc"]
+        packages: ["g++-5", "libstdc++-5-dev", "gdb"]
         sources:
         - ubuntu-toolchain-r-test
   - os: osx
@@ -171,12 +171,12 @@ matrix:
   - os: osx
     osx_image: xcode6.1
     env: BS=bjam CXX=clang++
-  #- os: osx
-    #osx_image: xcode6.4
-    #env: BS=bjam TOOLSET=clang CXX=clang++
-  #- os: osx
-    #osx_image: xcode6.4
-    #env: BS=cmake CXX=clang++
+  - os: osx
+    osx_image: xcode6.4
+    env: BS=bjam TOOLSET=clang CXX=clang++
+  - os: osx
+    osx_image: xcode6.4
+    env: BS=cmake CXX=clang++
   - os: osx
     osx_image: xcode7
     env: BS=bjam TOOLSET=clang CXX=clang++
@@ -197,8 +197,8 @@ matrix:
     env: BS=cmake BENCHMARK=ON CXX=clang++
 
 before_install:
-  - git config --global user.name "Travis-CI"
-  - git config --global user.email "travis@ci.net"
+  - git config --global user.name "Continuous Integration"
+  - git config --global user.email "krzysztof@jusiak.net"
   - git config --global push.default simple
 
 install:
@@ -225,8 +225,7 @@ script:
     "https://${GH_TOKEN}@github.com/krzysztof-jusiak/di"); fi
 
 after_success:
-  - if [ "${BENCHMARK}" != "" ]; then (git
-    clone https://github.com/krzysztof-jusiak/di.git benchmarks
+  - if [ "${BENCHMARK}" != "" ]; then (git clone https://github.com/krzysztof-jusiak/di.git benchmarks
     && cd benchmarks && git checkout -b benchmarks -t origin/benchmarks
     && find ../build/test ../test -iname "*.json" | xargs -I% cp % . && git add -A . && git commit -am "update"
     && git push --force --quiet "https://${GH_TOKEN}@github.com/krzysztof-jusiak/di"); fi
