--- a/.travis.yml
+++ b/.travis.yml
@@ -171,12 +171,12 @@ matrix:
   - os: osx
     osx_image: xcode6.1
     env: BS=bjam CXX=clang++
-  - os: osx
-    osx_image: xcode6.4
-    env: BS=bjam TOOLSET=clang CXX=clang++
-  - os: osx
-    osx_image: xcode6.4
-    env: BS=cmake CXX=clang++
+  #- os: osx
+    #osx_image: xcode6.4
+    #env: BS=bjam TOOLSET=clang CXX=clang++
+  #- os: osx
+    #osx_image: xcode6.4
+    #env: BS=cmake CXX=clang++
   - os: osx
     osx_image: xcode7
     env: BS=bjam TOOLSET=clang CXX=clang++
