--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -49,6 +49,7 @@ test(ut/scopes/singleton)
 test(ut/scopes/unique)
 test(ut/type_traits/ctor_traits)
 test(ut/type_traits/memory_traits)
+test(ut/type_traits/named_traits)
 test(ut/type_traits/rebind_traits)
 test(ut/type_traits/scope_traits)
 test(ut/wrappers/unique)
