--- a/.travis.yml
+++ b/.travis.yml
@@ -191,7 +191,8 @@ script:
     "https://${GH_TOKEN}@github.com/krzysztof-jusiak/di"); fi
 
 after_success:
-  - if [ "${BENCHMARK}" != "" ]; then (git clone https://github.com/krzysztof-jusiak/di.git benchmarks
+  - if [ "${TRAVIS_BRANCH}" == "cpp14" ] && [ "${BENCHMARK}" != "" ]; then (
+    git clone https://github.com/krzysztof-jusiak/di.git benchmarks
     && cd benchmarks && git checkout -b benchmarks -t origin/benchmarks
     && find ../build/test ../test -iname "*.json" | xargs -I% cp % . && git add -A . && git commit -am "update"
     && git push --force --quiet "https://${GH_TOKEN}@github.com/krzysztof-jusiak/di"); fi
